# rice

./: .gitignore  BUILD  Cargo.toml  Makefile  README.md  deps.bzl
.github/workflows/: rust.yml
bazel-locks/: rice-cargo-bazel-lock.json
src/: cdi.rs  kdf.rs  layer.rs  lib.rs  local_cdi.rs  x509.rs
src/x509/: attr.rs  certificate.rs  extensions.rs  name.rs  request.rs  time.rs  verify.rs
src/x509/extensions/: .#pkix.rs  dice.rs  pkix.rs
src/x509/extensions/dice/: tcbinfo.rs
src/x509/extensions/pkix/: authkeyid.rs  basicconstraints.rs  keyusage.rs  name.rs
src/x509/extensions/pkix/name/: dirstr.rs  ediparty.rs  general.rs  other.rs
