[package]
name = "rice"
authors = ["Rivos, Inc."]
version = "0.1.0"
edition = "2021"

[dependencies]
digest = {version = "0.10.3", default-features = false }
ed25519 = { version = "1.5.2", default-features = false, features = ["pkcs8"] }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"] }
generic-array = "0.14.6"
hkdf = "0.12.3"
hmac = "0.12.1"
sha2 = {version = "0.10", default-features = false }
spin = { version = "*", default-features = false, features = ["rwlock"] }
